style: Prevent horizontal overflow on the main element.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -86,6 +86,10 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
+main {
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--font-body);
   background-color: var(--color-bg);
